--- a/TownSquareAuth/Views/Events/Delete.cshtml
+++ b/TownSquareAuth/Views/Events/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Delete Event</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this event?</h3>
 
 <div>
     <h4>@Model.Title</h4>
@@ -17,8 +17,14 @@
     <p><strong>Category:</strong> @Model.Category</p>
 </div>
 
-<form asp-action="DeleteConfirmed" method="post">
+<form asp-action="Delete" method="post">
     <input type="hidden" asp-for="Id" />
+    @Html.AntiForgeryToken() 
+
     <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-</form>
+    <a asp-action="MyEvents" class="btn btn-secondary">My Events</a>
+    <a asp-action="Index" class="btn btn-secondary">All Events</a>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Home</a></form>
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
