--- a/TownSquareAuth/Views/Events/Edit.cshtml
+++ b/TownSquareAuth/Views/Events/Edit.cshtml
@@ -6,9 +6,11 @@
 
 <h1>Edit Event</h1>
 
+
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="Id" />
-    
+    @Html.AntiForgeryToken() 
+
     <div class="form-group">
         <label asp-for="Title"></label>
         <input asp-for="Title" class="form-control" />
@@ -40,8 +42,9 @@
         <span asp-validation-for="Category" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-success">Save</button>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-</form>
+    <a asp-action="MyEvents" class="btn btn-secondary">My Events</a>
+    <a asp-action="Index" class="btn btn-secondary">All Events</a>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Home</a></form>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
