--- a/TownSquareAuth/Views/Shared/_Layout.cshtml
+++ b/TownSquareAuth/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                   <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -27,6 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+
                     <partial name="_LoginPartial" />
                 </div>
             </div>
@@ -42,6 +43,10 @@
         <div class="container">
             &copy; 2025 - TownSquareAuth - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
+    <li class="nav-item">
+    <a class="nav-link text-white" asp-controller="Events" asp-action="MyEvents">My Events</a>
+    </li>
+
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
