--- a/TownSquareAuth/Views/Events/Details.cshtml
+++ b/TownSquareAuth/Views/Events/Details.cshtml
@@ -85,6 +85,10 @@ else
 
 </p>
 
+<div class="mb-4">
+    <img src="@ViewBag.EventImage" alt="Event Image" class="img-fluid rounded" />
+</div>
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
