--- a/TownSquareAuth/Views/Admin/Users.cshtml
+++ b/TownSquareAuth/Views/Admin/Users.cshtml
@@ -22,8 +22,9 @@
             <td>
                 <form asp-action="DeleteUser" method="post" style="display:inline;">
                     @Html.AntiForgeryToken()
-                    <input type="hidden" name="Id" value="@user.Id" />
-                    <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">Delete</button>
+                    <input type="hidden" name="id" value="@user.Id" />
+                    <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">
+                    Delete</button>
                 </form>
             </td>
         </tr>
