--- a/TownSquareAuth/Views/Events/Index.cshtml
+++ b/TownSquareAuth/Views/Events/Index.cshtml
@@ -26,7 +26,7 @@
             <th>Time</th>
             <th>Location</th>
             <th>Category</th>
-            <th>Organaizer</th>
+            <th>Creator</th>
             <th></th>
         </tr>
     </thead>
@@ -39,7 +39,15 @@
             <td>@item.Time</td>
             <td>@item.Location</td>
             <td>@item.Category</td>
-            <td>@(item.ApplicationUser != null ? item.ApplicationUser.UserName : "Deleted User")</td>
+            <td>
+                @if (item.ApplicationUser != null)
+                {
+                    <span class="text-muted">User</span>
+                }
+                else
+                {
+                    <span class="text-muted">Deleted User</span>
+                }
             <td>
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a>
             </td>
