--- a/TownSquareAuth/Views/Shared/_Layout.cshtml
+++ b/TownSquareAuth/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Admin" asp-action="Users">User Management</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Admin" asp-action="Events">Events Management</a>
+                                </li>
                             }
                         }
                     </ul>
