Uppdaterat HTML och CSS

--- a/TownSquareAuth/Views/Home/Index.cshtml
+++ b/TownSquareAuth/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="text-center mb-5">
     <h1 class="display-4">Welcome to TownSquare!</h1>
     <p>Discover, join, and create events in your community.</p>
-    <a class="btn btn-primary" asp-controller="Events" asp-action="Index">Browse Events</a>
+    @* <a class="btn btn-primary" asp-controller="Events" asp-action="Index">Browse Events</a> *@
 </div>
 <div class="row">
     <div class="col-md-4 mb-3">
